# 1_7_RC_Car

./: .mxproject  CMakeLists.txt  Control_node.cpp  RaceTrack_Planning_highspeed.csv  Readme  chassis_task.ioc  cmd.txt  data.csv  patch_ac6.bat  plot.py  readme.txt  rosbag_plot.py  test.csv  test1.csv  test_track.csv  天台内圈.csv  天台内圈_10_15.csv  天台外圈.csv  天台外圈_10_15.csv  硬件平台说明.docx  绕圈.csv
Database/: Boundary_Inner.csv  Boundary_Outer.csv  Centerline.csv  FxRparams_data1.csv  FxRparams_data2.csv  Other_RTK_Data.csv  Planning_v1.csv  Planning_v2.csv  Planning_v3.csv  Test_Data.csv  Tireparams_Data.csv  UWB_test_planning.csv  stand_0_04.csv  西天台优化轨迹4.csv  西天台优化轨迹5.csv
Inc/: main.h  stm32f4xx_it.h  tim.h
Inc/Algorithm/: alg_ahrs.h  alg_crc.h  alg_filter.h  alg_kalman.h  alg_math.h  alg_pid.h  alg_quaternionEKF.h
Inc/Application/: app_chassis.h  app_communicate.h  app_init.h  app_ins.h  app_remote.h  app_watchDog.h
Inc/Periphal/: periph_bmi088.h  periph_motor.h  periph_remote.h  periph_servo.h
Inc/Protocol/: protocol_common.h  protocol_receive.h  protocol_transmit.h
Inc/System/: sys_const.h  sys_dwt.h  sys_softTimer.h
Inc/Utility/: util_can.h  util_flash.h  util_gpio.h  util_pwm.h  util_spi.h  util_uart.h
Inc/etc/: Code_specification.h  reg_BMI088.h
Kalman_Filter_Library/: CMakeLists.txt
Kalman_Filter_Library/include/Kalman_Filter_Library/: ekf_pose_system.h  filter_base.h  filter_common.h  pose_system_common.h
Kalman_Filter_Library/src/: ekf_pose_system.cpp  filter_base.cpp  filter_common.cpp
MDK-ARM/: JLinkLog.txt  chassis_task.uvguix.69546  chassis_task.uvguix.82100  chassis_task.uvoptx  chassis_task.uvprojx  startup_stm32f407xx.lst  startup_stm32f407xx.s
MDK-ARM/chassis_task/: alg_crc.crf  alg_crc.d  alg_filter.crf  alg_filter.d  alg_kalman.crf  alg_kalman.d  alg_math.crf  alg_math.d  alg_pid.crf  alg_pid.d  alg_quaternionekf.crf  alg_quaternionekf.d  app_chassis.d  app_communicate.crf  app_communicate.d  app_gimbal.crf  app_gimbal.d  app_init.crf  app_init.d  app_ins.crf  app_ins.d  app_remote.crf  app_remote.d  app_watchdog.crf  app_watchdog.d  app_wheelleg.crf  app_wheelleg.d  can.crf  can.d  chassis_task.axf  chassis_task.build_log.htm  chassis_task.hex  chassis_task.htm  chassis_task.lnp  chassis_task.map  chassis_task_chassis_task.dep  cmsis_os.crf  cmsis_os.d  croutine.crf  croutine.d  (+136 more)
Process_Func/: Config.py  RaceTrack_plot.py
Process_Func/Params_Solve_Func/: FxRparams_Solve.py  Tireparams_Solve.py  Tireparams_Solve_Carsim.py
Process_Func/Result_Plot_Func/: EKF.py  Trajectory_Plot.py  calculate_centerline.py  latlon_to_xy.py
Process_Func/Transfomer_Func/: Csv_Planning2Control.py  Csv_Rotation.py
Src/: can.c  dma.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c  usbd_cdc_if.c
Src/Algorithm/: alg_crc.c  alg_filter.c  alg_kalman.c  alg_math.c  alg_pid.c  alg_quaternionEKF.c
Src/Application/: app_chassis.c  app_communicate.c  app_init.c  app_ins.c  app_remote.c  app_watchDog.c
Src/Periphal/: periph_bmi088.c  periph_motor.c  periph_remote.c  periph_servo.c
Src/Protocol/: protocol_common.c  protocol_receive.c  protocol_transmit.c
Src/System/: sys_const.c  sys_dwt.c  sys_softTimer.c
Src/Utility/: util_can.c  util_flash.c  util_gpio.c  util_pwm.c  util_spi.c  util_uart.c
casadi/: install_casadi.sh
casadi/casadi-3.5.5.1/: PKG-INFO  setup.py
casadi/casadi-3.5.5.1/casadi.egg-info/: SOURCES.txt
cmake/: FindEigen3.cmake
config/: localization_node.yaml  sensor_handler.yaml
data/: UWB_test.csv  drift2.csv  load_map_tiantai.csv  load_planning.csv  map_garden.csv  r_pid.csv  save_map_tiantai.csv  states.csv  states1.csv  states2.csv  test_2m.csv  test_drift.csv  test_garden.csv  test_garden1.csv  tireparams_test.csv  tracking.csv  tracking_garden.csv
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/in2ulv_msgs/: ActionType.h  ChassisCtrlMsg.h  ChassisInfoToHMI.h  ChassisMsg.h  CheckWithinLanelet.h  CheckWithinLaneletRequest.h  CheckWithinLaneletResponse.h  CloudCluster.h  CloudClusterArray.h  ControlResult.h  DetectedObject.h  DetectedObjectArray.h  DrivingInfo.h  GetNextStation.h  GetNextStationRequest.h  GetNextStationResponse.h  GisInfo.h  HDMapBin.h  HDMapPrimitive.h  HDMapRoute.h  HDMapSegment.h  HDMapService.h  HDMapServiceRequest.h  HDMapServiceResponse.h  HMIModeCommand.h  HMIModeCommandRequest.h  HMIModeCommandResponse.h  HMISettingCommand.h  (+18 more)
in2ulv_common/: CHANGELOG.rst  package.xml
in2ulv_msgs/: CMakeLists.txt  package.xml
include/in2ulv_localization/: imu_handler.h  ins_handler.h  lidar_handler.h  localization_node.h  odometry_handler.h  sensor_handler.hpp
launch/: localization_node.launch  localization_node_debug.launch
my_py/: csv_deal.py  csvdata_processing.py
src/: imu_handler.cpp  ins_handler.cpp  lidar_handler.cpp  localization_node.cpp  odometry_handler.cpp
src/in2ulv_common/: CMakeLists.txt
src/my_serial_node/: CMakeLists.txt
src/my_serial_node/launch/: start.launch
src/my_serial_node/src/: Control_node.cpp  serial_node.cpp
src/race_car_pkg/: CMakeLists.txt  package.xml
src/race_car_pkg/include/race_car_pkg/: car_model.h  control_node.h  mpc_func.h  serial_node.h
src/race_car_pkg/launch/: start.launch
src/race_car_pkg/msg/: CarStates.msg
src/race_car_pkg/param/: params.yaml
src/race_car_pkg/src/: Control_node_Planning_ca.cpp  Control_node_Planning_hw.cpp  car_model.cpp  control_node.cpp  control_node_ca.cpp  control_node_df.cpp  control_node_hw.cpp  control_node_mpc.cpp  mpc_func.cpp  mpc_main.cpp  serial_node.cpp
src/test_pkg/: CMakeLists.txt  package.xml
src/xsens_mti_driver/: README.md
(+335 files in other folders)
